Closed Bug 336190 Opened 18 years ago Closed 18 years ago

Uninitialized variable in nsSVGUtils::ObjectSpace (layout/svg/base/src/nsSVGUtils.cpp)

Categories

(Core :: SVG, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED

People

(Reporter: kherron+mozilla, Assigned: longsonr)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity)

Attachments

(2 files)

Please refer to the sample URL. The variable |fraction| is only initialized when the test at lines 534-535 succeeds. But it's unconditionally used to calculate the return value.
Attached patch patchSplinter Review
Assignee: general → longsonr
Status: NEW → ASSIGNED
Attachment #220620 - Flags: review?(jwatt)
Comment on attachment 220620 [details] [diff] [review]
patch

r=jwatt, but please break it over two lines so as not to exceed the 80 chars/line limit:

    fraction =
      aLength->GetAnimValue(NS_STATIC_CAST(nsSVGCoordCtxProvider*, nsnull));
Attachment #220620 - Flags: review?(jwatt) → review+
Attachment #220622 - Flags: superreview?(tor)
Attachment #220622 - Flags: superreview?(tor) → superreview+
Checked in

Checking in nsSVGUtils.cpp;
/cvsroot/mozilla/layout/svg/base/src/nsSVGUtils.cpp,v  <--  nsSVGUtils.cpp
new revision: 1.22; previous revision: 1.21
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: