Bug 336190 - Uninitialised variable in nsSVGUtils::ObjectSpace. r=jwatt,sr=tor